--- a/styles/popup.css
+++ b/styles/popup.css
@@ -10,18 +10,49 @@ body {
   height: max-content;
 }
 
-header > * {
+.header {
+  color: #000;
+  text-decoration: none; /* no underline */
+}
+
+.header > * {
   float: left;
   margin-bottom: 0;
 }
 
-header > h1 {
+.header > h1 {
   margin-left: 18px;
   margin-top: 10px;
 }
 
 
-/*buttons*/
+/*search bar and search button*/
+.search {
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+
+.searchTerm {
+  width: inherit;
+  min-width: 200px;
+  font-weight: 600;
+}
+
+.searchTerm:focus {
+  color: #00B4CC;
+}
+
+.searchButton:focus {
+  outline: none;
+}
+
+.searchButton:active {
+  outline-style: none;
+  background: #B4CC00;
+  border-color: #B4CC00;
+}
+
 .searchButton {
   width: 40px;
   height: 36px;
@@ -32,23 +63,6 @@ header > h1 {
   border-radius: 0 5px 5px 0;
   cursor: pointer;
   font-size: 20px;
-}
-
-
-/*search bar*/
-.search {
-  width: 100%;
-  position: relative;
-  display: flex;
-}
-
-.searchTerm {
-  width: inherit;
-  min-width: 200px;
-}
-
-.searchTerm:focus {
-  color: #00B4CC;
 }
 
 /*!*Resize the wrap to see the search bar change!*!*/
