--- a/styles/popup.css
+++ b/styles/popup.css
@@ -5,26 +5,48 @@
 }
 
 body {
-  background: #f2f2f2;
+  background: #FFFCF9;
   width: max-content;
   height: max-content;
+  margin: 0;
+  min-width: 400px;
+
+  /* Fixed max https://stackoverflow.com/a/8983678 */
+  max-width: 800px;
+  max-height: 600px
 }
 
+/*header*/
 .header {
-  color: #000;
+  color: #454545;
   text-decoration: none; /* no underline */
+  background: rgb(245, 225, 124);
+  background: linear-gradient(90deg, #FFE279 50%, rgba(255, 158, 44, 0.7) 119.81%);
+  display: flex;
 }
 
-.header > * {
-  float: left;
-  margin-bottom: 0;
-}
-
-.header > h1 {
+#caption {
   margin-left: 18px;
-  margin-top: 10px;
 }
 
+.header > *:hover {
+  color: #000000;
+}
+
+#caption small {
+  font-weight: 400;
+  color: #666;
+}
+
+#settings {
+  margin-left: auto;
+  padding: 0 16px;
+}
+
+/*content wrapper*/
+.resultWrapper, .searchWrapper {
+  padding: 10px 8px;
+}
 
 /*search bar and search button*/
 .search {
@@ -65,11 +87,48 @@ body {
   font-size: 20px;
 }
 
-/*!*Resize the wrap to see the search bar change!*!*/
-/*.wrap {*/
-/*  width: 30%;*/
-/*  position: absolute;*/
-/*  top: 50%;*/
-/*  left: 50%;*/
-/*  transform: translate(-50%, -50%);*/
-/*}*/
+/*goose*/
+#gooseHelper {
+  /*background: url(image.png);*/
+  width: 49px;
+  height: 60px;
+  transform: rotate(-10.09deg);
+}
+
+#queryWrapper {
+  padding: 8px 5px;
+  background: #FFB470;
+  border-radius: 10px;
+  color: #fff;
+  display: inline-table;
+}
+
+#query {
+  overflow-wrap: anywhere;
+  margin: 0;
+}
+
+.resultWrapper > * {
+  margin: 5px;
+}
+
+/*results*/
+
+.resultItem {
+  min-height: 80px;
+  background: #FFFFFF;
+  border: 0.25px solid #F1F1F1;
+  box-sizing: border-box;
+  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+  padding: 10px;
+}
+
+.resultContent {
+  margin: 0;
+}
+
+/* You search for...*/
+.queryDisplay {
+  font-size: larger;
+  overflow-wrap: break-word;
+}
