--- a/styles/popup.css
+++ b/styles/popup.css
@@ -45,54 +45,107 @@ body {
 
 /*content wrapper*/
 .resultWrapper, .searchWrapper {
-  padding: 10px 8px;
+  padding: 5px 8px;
 }
 
 /*search bar and search button*/
-.search {
-  width: 100%;
-  position: relative;
-  display: flex;
+.speech-bubble {
+  transform: rotate(5.96deg);
+  width: 60%;
+  position: absolute;
+  bottom: 55px;
+  left: 110px;
+  z-index: 100;
+  background: white;
+  padding: 0 5px;
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.25);
+  min-width: 250px;
+
+  /*chat bubble*/
+  border: 5px groove #000;
+  border-radius: 30px;
+  -webkit-border-radius: 30px;
+  -moz-border-radius: 30px;
+}
+
+/*Right triangle, placed bottom left side slightly in*/
+.tri-right.border.btm-left-in:before {
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 33px;
+  right: auto;
+  top: auto;
+  bottom: -33px;
+  border: 16px groove;
+  border-color: #000 transparent transparent #000;
+}
+
+.tri-right.btm-left-in:after {
+  content: ' ';
+  position: absolute;
+  width: 0;
+  height: 0;
+  left: 38px;
+  right: auto;
+  top: auto;
+  bottom: -20px;
+  border: 12px solid;
+  border-color: #fff transparent transparent #fff;
+}
+
+.search:focus-within {
+  /*border-color: rgb(50, 50, 50);*/
+  border-color: black;
+
 }
 
 .searchTerm {
-  width: inherit;
   min-width: 200px;
-  font-weight: 600;
+  font-weight: 700;
+  border: none;
+  vertical-align: text-bottom;
+  position: absolute;
+  height: 100%;
+  background: none;
+  width: calc(100% - 40px);
+  text-transform: uppercase;
 }
 
 .searchTerm:focus {
-  color: #00B4CC;
-}
-
-.searchButton:focus {
   outline: none;
+  /*color: #00B4CC;*/
 }
 
 .searchButton:active {
-  outline-style: none;
-  background: #B4CC00;
+  outline: none;
+  /*background: #B4CC00;*/
   border-color: #B4CC00;
+  background: #00B4CC;
 }
 
 .searchButton {
-  width: 40px;
-  height: 36px;
-  border: 1px solid #00B4CC;
-  background: #00B4CC;
+  width: 30px;
+  height: 30px;
+  border-radius: 100px;
   text-align: center;
   color: #fff;
-  border-radius: 0 5px 5px 0;
+  border: none;
   cursor: pointer;
   font-size: 20px;
+  background: inherit;
+  outline: none;
+  padding-left: 2px;
+  float: right;
 }
 
 /*goose*/
 #gooseHelper {
-  /*background: url(image.png);*/
-  width: 49px;
-  height: 60px;
+  width: 73.5px;
+  height: 90px;
   transform: rotate(-10.09deg);
+  padding-left: 20px
 }
 
 #queryWrapper {
@@ -109,7 +162,7 @@ body {
 }
 
 .resultWrapper > * {
-  margin: 5px;
+  margin: 10px 5px;
 }
 
 /*results*/
@@ -119,7 +172,7 @@ body {
   background: #FFFFFF;
   border: 0.25px solid #F1F1F1;
   box-sizing: border-box;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.25);
   padding: 10px;
 }
 
@@ -131,4 +184,5 @@ body {
 .queryDisplay {
   font-size: larger;
   overflow-wrap: break-word;
+  margin-top: 5px;
 }
