--- a/styles/popup.css
+++ b/styles/popup.css
@@ -10,9 +10,10 @@ body {
   height: max-content;
   margin: 0;
   min-width: 400px;
+  min-height: 300px;
 
   /* Fixed max https://stackoverflow.com/a/8983678 */
-  max-width: 800px;
+  max-width: 750px;
   max-height: 600px
 }
 
@@ -54,7 +55,7 @@ body {
 }
 
 .searchWrapper {
-  position: relative;
+  position: fixed;
   /*overflow: hidden;*/
   height: 120px;
 }
@@ -63,15 +64,18 @@ body {
 .speech-bubble {
   transform: rotate(5.96deg);
   width: 60%;
-  position: absolute;
-  top: 10px;
-  left: 120px;
+  position: fixed;
+  bottom: 75px;
+  left: 110px;
   z-index: 100;
   background: white;
   padding: 0 5px;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.25);
   min-width: 250px;
   min-height: 30px;
+  visibility: visible;
+  opacity: 1;
+  transition: all 300ms;
 
   /*chat bubble*/
   border: 3px groove #000;
@@ -167,6 +171,8 @@ body {
   position: fixed;
   bottom: -13px;
   left: -10px;
+  cursor: pointer;
+  transition: all 300ms;
 }
 
 #queryWrapper {
@@ -182,6 +188,10 @@ body {
   margin: 0;
 }
 
+.resultWrapper {
+  margin-bottom: 80px;
+}
+
 .resultWrapper > * {
   margin: 10px 5px;
 }
@@ -189,7 +199,7 @@ body {
 /*results*/
 
 .resultItem {
-  min-height: 80px;
+  min-height: 60px;
   background: #FFFFFF;
   border: 0.25px solid #F1F1F1;
   box-sizing: border-box;
