--- a/styles/popup.css
+++ b/styles/popup.css
@@ -205,8 +205,8 @@ body {
   border: 0.25px solid #F1F1F1;
   box-sizing: border-box;
   box-shadow: 0 3px 2px rgba(0, 0, 0, 0.25);
-  padding: 10px;
   position: relative;
+  padding: 10px 10px 20px;
 }
 
 .resultContent {
