--- a/styles/popup.css
+++ b/styles/popup.css
@@ -264,6 +264,7 @@ body {
   right: 15px;
   color: #666;
   font-size: 10.5px;
+  z-index: -1;
 }
 
 #heart {
@@ -282,4 +283,48 @@ body {
 .answer * {
   margin: 0;
 
+}
+
+.loadingContainer {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  background: rgba(30, 30, 30, 0.7);
+  z-index: 1000000;
+  /*top: 64.15px;*/
+  top: 0;
+  left: 0;
+  display:None;
+}
+
+.loading {
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -50px 0 0 -50px;
+  text-align: center;
+  color: #eee;
+  font-weight: bold;
+  font-size: larger;
+  animation: rotation 1.5s infinite ease-in-out;
+}
+
+
+.goose-loading {
+  width: 100px;
+
+  padding-bottom: 10px;
+
+}
+
+
+@keyframes rotation {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(359deg);
+  }
 }
